--- a/examples/a-videosphere/index.html
+++ b/examples/a-videosphere/index.html
@@ -12,7 +12,7 @@
       <a-assets timeout="10000">
         <video id="city" src="city.mp4" loop="true"></video>
       </a-assets>
-      <a-videosphere startplay src="#city"></a-videosphere>
+      <a-videosphere startplay src="#city" rotation="0 180 0"></a-videosphere>
       <!-- <a-sky startplay src="#city" rotation="0 180 0"></a-sky> -->
       <a-entity position="0 0 3.8">
         <a-camera><a-cursor color="#2E3A87"></a-cursor></a-camera>
